--- a/fly.toml
+++ b/fly.toml
@@ -13,6 +13,10 @@ processes = []
   allowed_public_ports = []
   auto_rollback = true
 
+[mounts]
+source="unpkg_data"
+destination="/data"
+
 [[services]]
   http_checks = []
   internal_port = 8080
