--- a/package.json
+++ b/package.json
@@ -13,19 +13,30 @@
   "dependencies": {
     "@remix-run/react": "^1.0.6",
     "@remix-run/serve": "^1.0.6",
+    "better-sqlite3": "^7.4.6",
+    "fs-extra": "^10.0.0",
+    "gunzip-maybe": "^1.4.2",
     "mime": "^3.0.0",
     "pacote": "^12.0.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "remix": "^1.0.6",
-    "sri-toolbox": "^0.2.0"
+    "semver": "^7.3.5",
+    "sri-toolbox": "^0.2.0",
+    "tar-stream": "^2.2.0"
   },
   "devDependencies": {
     "@remix-run/dev": "^1.0.6",
+    "@types/better-sqlite3": "^7.4.2",
+    "@types/fs-extra": "^9.0.13",
+    "@types/gunzip-maybe": "^1.4.0",
     "@types/mime": "^2.0.3",
     "@types/pacote": "^11.1.1",
     "@types/react": "^17.0.24",
     "@types/react-dom": "^17.0.9",
+    "@types/semver": "^7.3.9",
+    "@types/tar-stream": "^2.2.2",
+    "esbuild-register": "^3.3.1",
     "typescript": "^4.1.2"
   },
   "engines": {
